force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/BMCServiceDesk__WebAPIConfiguration__c.object-meta.xml
<CustomObject>
    <description>Stores the web API service configurations data.</description>
    <label>Web API Configuration</label>
    <nameField>
        <label>Web API Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web API Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>