force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Call_Web_API_on_Task_Closed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Call_Web_API_on_Task_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call Web API on closed tasks</description>
    <inlineHelpText>Select this check box to allow the service call for the closed tasks.</inlineHelpText>
    <label>Call Web API on Task Closed</label>
    <type>Checkbox</type>
</CustomField>