force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Certificate_Name__c</fullName>
    <inlineHelpText>Specify certificate name to call a service.</inlineHelpText>
    <label>Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>