force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Hours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Hours__c</fullName>
    <inlineHelpText>Number of hours allowed for an API call to be made after a task is closed.</inlineHelpText>
    <label>Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>