force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__HTTP_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__HTTP_Content_Type__c</fullName>
    <description>HTTP Request Content Type</description>
    <inlineHelpText>Specify HTTP content type of the service.</inlineHelpText>
    <label>Request Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>