force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__HTTPBody__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__HTTPBody__c</fullName>
    <inlineHelpText>Specify the request body of the service.</inlineHelpText>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>