force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__HTTPHeaders__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__HTTPHeaders__c</fullName>
    <inlineHelpText>Specify HTTP headers of the request.</inlineHelpText>
    <label>Request Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>