force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__HttpMethod__c</fullName>
    <inlineHelpText>Select the REST method to be called for the service.</inlineHelpText>
    <label>Request Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>