force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if you are using a sandbox.</inlineHelpText>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>