force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Request_Target_Namespace__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Request_Target_Namespace__c</fullName>
    <description>Specify target namespace of the service.</description>
    <inlineHelpText>SOAP Target Namespace</inlineHelpText>
    <label>Request Target Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>