force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Required_Certificate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Required_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box if the web API call needs certificate.</inlineHelpText>
    <label>Required Certificate</label>
    <type>Checkbox</type>
</CustomField>