force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Security_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Security_Type__c</fullName>
    <inlineHelpText>Specify security type of the service.</inlineHelpText>
    <label>Security Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>