force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Service_Pass_phrase__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_Pass_phrase__c</fullName>
    <inlineHelpText>Specify password to authenticate the service.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>