force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Service_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_Type__c</fullName>
    <inlineHelpText>Select the service type.</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SoapBasic</fullName>
            </value>
            <value>
                <fullName>RestService</fullName>
            </value>
            <value>
                <fullName>SoapAdvance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>