force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__Service_URL__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_URL__c</fullName>
    <inlineHelpText>Specify the end-point URL of the service.</inlineHelpText>
    <label>Service URL</label>
    <type>Url</type>
</CustomField>