force-app/main/default/objects/BMCServiceDesk__WebAPIConfiguration__c/fields/BMCServiceDesk__SOAP_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SOAP_Method_Name__c</fullName>
    <description>Specify SOAP Method Name</description>
    <inlineHelpText>Specify SOAP Method Name</inlineHelpText>
    <label>SOAP Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>